# manolab

./: .gitignore  .gitmodules  CMakeLists.txt  IPlugin.h  IProcessEngine.h  LICENSE  Node.cpp  Node.h  Plugin.h  PluginBase.h  PluginController.cpp  PluginController.h  ProcessEngine.cpp  ProcessEngine.h  QEngineModel.cpp  QEngineModel.h  README.md  SerialPort.cpp  SerialPort.h  Settings.cpp  Settings.h  icon.rc  label.js  main-cli.cpp  main-cli.h  main.cpp  manolab-cli.pro  manolab-core.pri  manolab.ini  manolab.json  manolab.pro  qml.qrc
build-manoab/debug/logs/: log_2020-12-02.csv
build-manoab/debug/moc/: moc_LabelPrinter.cpp  moc_ShowImage.cpp  moc_SoundPlayer.cpp  moc_main-cli.cpp  moc_predefs.h
devices/: AcuDC.cpp  AcuDC.h  BK8500.cpp  BK8500.h  CanDevice.cpp  CanDevice.h  Controllino.cpp  Controllino.h  DeviceBase.cpp  DeviceBase.h  IModbusMaster.h  LabelPrinter.cpp  LabelPrinter.h  LonganCanModule.cpp  LonganCanModule.h  ManoLabServer.cpp  ManoLabServer.h  MiniCircuitsPwrSen.cpp  MiniCircuitsPwrSen.h  ModbusMaster.cpp  ModbusMaster.h  Registry.hpp  SerialDevice.cpp  SerialDevice.h  VoltcraftPPS.cpp  VoltcraftPPS.h  Zebra7500.cpp  Zebra7500.h
icons/: index.theme
jsext/: Delay1s.cpp  Delay1s.h  Environment.cpp  Environment.h  ExecuteCommand.cpp  ExecuteCommand.h  InputText.cpp  InputText.h  PrintLog.cpp  PrintLog.h  PrintReport.cpp  PrintReport.h  ShowImage.cpp  ShowImage.h  ShowMessage.cpp  ShowMessage.h  SoundPlayer.cpp  SoundPlayer.h
lib/ixxat/: .gitignore  Ixxat.h  ixxat.cpp  ixxat.sln  ixxat.vcxproj  main.cpp
lib/ixxat/inc/: VCI4113guid.h  cantype.h  vci4115guid.h  vcierr.h  vcinpl2.h  vciver.h
lib/ixxat/lib/x32/: vcinpl.lib  vcinpl2.lib
lib/ixxat/lib/x32/Release/: vciapi.lib
lib/ixxat/lib/x64/: vcinpl.lib  vcinpl2.lib
lib/ixxat/lib/x64/Release/: vciapi.lib
lib/ixxat/libixxat/: dllmain.cpp  libixxat.cpp  libixxat.def  libixxat.h  libixxat.vcxproj
lib/libzebrarfid/: Zebra7500Util.cpp  Zebra7500Util.h  rfidapiConstants.h  rfidapiStructs.h  rfidapiTypes.h
lib/qrencode-4.0.0/: qrencode.h
lib/win32/cp210x/: Types.h  silabs_defs.h  silabs_sal.h
manolab-cli/: main-cli.cpp  manolab-cli.pro
manolab-gui/: CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  ConsoleWindow.cpp  ConsoleWindow.h  Gui.cpp  Gui.h  ImageWindow.cpp  ImageWindow.h  MainWindow.cpp  MainWindow.h  TableWindow.cpp  TableWindow.h  TaskListWindow.cpp  TaskListWindow.h  WindowBase.h  main.cpp
manolab-gui/glfw/: CMakeLists.txt
plugins/: .gitignore
plugins/zebrafx7500/: .gitignore  CMakeLists.txt  Zebra7500.cpp  Zebra7500.h  Zebra7500Util.h  rfidapi.h  rfidapiErrors.h  zebra7500.cpp  zebra7500.h  zebrafx7500_global.h
plugins/zebrafx7500/libs/win64/: rfidapi32pc.lib
qml/: DisplayPanel.qml  TestList.qml  main.qml
qml/components/: BigComboBox.qml  DeviceStatus.qml  MessageBar.qml  RoundBigButton.qml  TestItem.qml
test/: test_zebra7500.js
